# AgentVST

./: .gitignore  .gitmodules  AI-Assisted JUCE Plugin Development.md  CMakeLists.txt  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  PRE_DEPLOYMENT_CHECKLIST.md  QAFeedback.md  QUICK_START.md  SRS.md  TROUBLESHOOTING.md  VSTS_SRS.md  _build_and_test_agentvst.cmd  _build_and_validate_vst3_examples.cmd  _build_release_and_deploy.cmd  _configure_only_agentvst.cmd  _configure_with_ableton_vst3_deploy.cmd  append_suite_5.py  build_output.txt  check_cmake.py  create_girih.py  create_human_error.py  create_infrasonic_dread.py  create_muqarnas.py  create_strapwork.py  create_tawhid.py  create_tonnetz.py  create_zotu.py  fix_cmake.py  temp_edit.py  write_dsp.py  write_md.py
.github/workflows/: build.yml  incubation-layer.yml
AgentCompressor.vst3/Contents/Resources/: moduleinfo.json
AgentEQ.vst3/Contents/Resources/: moduleinfo.json
SNDEV/docs/: conception-2026-04-26-fix-normalized-params.md  conception-2026-05-05-infrasonic-dread-bed.md  conception-2026-05-05-strapwork-counterpoint-weave.md  conception-2026-05-05-tawhid-suspension-grains.md  impl-2026-04-17-update-vst3-deploy-path.md  impl-2026-04-18-False_Memory_Convolution.md  impl-2026-04-18-Fractured_Tachyon.md  impl-2026-04-18-Varispeed_Shepard_Looper.md  impl-2026-04-18-anti-loudness.md  impl-2026-04-18-bimodal-weight-eq.md  impl-2026-04-18-dechronicization-engine.md  impl-2026-04-18-devils-grid.md  impl-2026-04-18-differential-glide-modulator.md  impl-2026-04-18-doppler-shifted-room-setup.md  impl-2026-04-18-escher-pitch-shifter.md  impl-2026-04-18-escher-shifter-expansion.md  impl-2026-04-18-fix-dissonance-fuzz-cmake.md  impl-2026-04-18-fix-ps-scriptroot.md  impl-2026-04-18-intermodulation-wall.md  impl-2026-04-18-launch-json.md  impl-2026-04-18-material-decay-resonator.md  impl-2026-04-18-negative-space-delay.md  impl-2026-04-18-ring-mod-void.md  impl-2026-04-18-sensory-dissonance-smart-fuzz.md  impl-2026-04-18-standardize-example-cmake.md  impl-2026-04-18-transients-to-texture.md  impl-2026-04-18-varispeed-shepard-looper.md  impl-2026-04-20-lacrimosa-65-modulator.md  impl-2026-04-20-thread-of-memory-mediant-splitter.md  impl-2026-04-26-audio-glitch-fix.md  impl-2026-04-26-fix-normalized-params.md  impl-2026-04-26-int64-sample-stamp-followup.md  impl-2026-04-26-universal-bitcrush-context-fix.md  impl-2026-04-27-kinetic-drum-engine-improvements.md  impl-2026-04-27-kinetic-drum-engine-parameter-wiring.md  impl-2026-04-27-lacrimosa-6-5.md  impl-2026-04-27-melancholy-28-31.md  impl-2026-04-27-thread-of-memory.md  impl-2026-05-05-qa-priority2.md  impl-2026-05-06-anti-loudness-slope.md  (+3 more)
cli/: CMakeLists.txt
cli/src/: BuildCommand.cpp  BuildCommand.h  CommandRegistry.cpp  CommandRegistry.h  InitCommand.cpp  InitCommand.h  ValidateCommand.cpp  ValidateCommand.h  ValidateDspCommand.cpp  ValidateDspCommand.h  main.cpp
cmake/: agentvst_ids.cmake  agentvst_plugin.cmake
docs/: INCUBATION_LAYER.md  agent_api.md  schema_spec.md
docs/prompts/: copilot_schema_prompt.md  remote_llm_json_prompt.md
docs/specs/melancholy/: 28-31-implementation-spec.md
examples/: CMakeLists.txt
examples/anti_loudness_transient_restorer/AntiLoudnessTransientRestorer/: CMakeLists.txt  README.md  plugin.json
examples/compressor/: CMakeLists.txt  plugin.json
examples/compressor/src/: CompressorDSP.cpp
examples/dualism/: README.md  test_dualism.cpp
examples/lacrimosa_6_5_modulator/: test_lacrimosa.cpp
examples/material_decay/: CMakeLists.txt
examples/sensory_dissonance_fuzz/: CMakeLists.txt
examples/simple_gain/: CMakeLists.txt  plugin.json
examples/thread_of_memory/: test_thread_of_memory.cpp
examples/three_band_eq/: CMakeLists.txt  plugin.json
framework/: CMakeLists.txt
framework/include/: AgentDSP.h  AgentVST.h  DSPNode.h  DSPRouter.h  ParameterCache.h  ProcessBlockHandler.h  SchemaParser.h  StateSerializer.h  UIGenerator.h
framework/src/: AgentDSP.cpp  DSPRouter.cpp  ParameterCache.cpp  ProcessBlockHandler.cpp  SchemaParser.cpp  UIGenerator.cpp
framework/src/PluginWrapper/: AgentVSTEditor.cpp  AgentVSTEditor.h  AgentVSTProcessor.cpp  AgentVSTProcessor.h  PluginEntry.cpp
framework/src/modules/: BiquadFilter.cpp  BiquadFilter.h  Delay.cpp  Delay.h  EnvelopeFollower.cpp  EnvelopeFollower.h  EscherShifter.cpp  EscherShifter.h  Gain.cpp  Gain.h  Oscillator.cpp  Oscillator.h
generated_test/SchemaExampleToneShaper/: CMakeLists.txt  README.md  plugin.json
orchestrator/: README.md  app.py  requirements.txt
plugins/DualismPlugin/: CMakeLists.txt
plugins/DualismPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
schema/: anti_loudness_transient_restorer.json  bimodal_weight_fletcher_munson_eq.json  dechronicization_engine.json  differential_glide_modulator.json  doppler_shifted_room.json  escher_pitch_shifter.json  example_plugin.json  false_memory_convolution.json  fractured_tachyon.json  human_error_ensemble.json  intermodulation_wall_generator.json  material_decay_resonator.json  negative_space_delay.json  oceanic_haas_widener.json  plugin.schema.json  ring_modulator_of_the_void.json  sensory_dissonance_fuzz.json  transients_to_texture.json  varispeed_shepard_looper.json  zone_of_the_unknown.json
scripts/: README.md  build_and_deploy_vst3.ps1  generate.py  requirements.txt  run_pluginval.ps1  schema_tools.py  smoke_test_generate.py  validate_schema.py  verify_deployment.ps1
tests/: CMakeLists.txt
tests/audio-fixtures/: README.md  compressor_bypass.json  compressor_heavy.json  compressor_heavy_makeup6db.json  run_audio_acceptance.py  simple_gain_bypass.json  simple_gain_minus12db.json  simple_gain_plus6db.json
tests/integration/: FullPipelineTest.cpp  StateRoundTripTest.cpp
tests/unit/: APVTSRoundTripTest.cpp  BiquadFilterTest.cpp  DSPRouterTest.cpp  DelayTest.cpp  EnvelopeFollowerTest.cpp  GainTest.cpp  OscillatorTest.cpp  ParameterCacheTest.cpp  ProcessBlockHandlerTest.cpp  SchemaParserTest.cpp  UIGeneratorTest.cpp
ui/default/: escher_shifter.yaml  index.html  main.js  style.css
(+138 files in other folders)
